--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon src/infrastructure/api/server.ts",
     "git": "git add . && git commit -m \"${npm_config_m:-auto commit $(date)}\" && git push",
     "test": "jest"
   },
@@ -18,13 +18,19 @@
     "@swc/core": "^1.15.7",
     "@swc/jest": "^0.2.39",
     "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@types/express": "^5.0.6",
     "@types/uuid": "^10.0.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "nodemon": "^3.1.11",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
