--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
     "sqlite3": "^5.1.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^1.7.1"
   }
 }
