feat: create presentation

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@swc/core": "^1.15.7",
     "@swc/jest": "^0.2.39",
     "@types/jest": "^30.0.0",
+    "@types/jstoxml": "^5.0.0",
     "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
     "supertest": "^7.1.4",
@@ -30,6 +31,7 @@
     "@types/uuid": "^10.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jstoxml": "^3.2.6",
     "nodemon": "^3.1.11",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.7",
